# asio

./: CMakeLists.txt  asio-config.cmake.in
asio/: boostify.pl  configure.ac
asio/include/asio/: buffer.hpp  error.hpp  socket_base.hpp  spawn.hpp  thread_pool.hpp
asio/include/asio/detail/: config.hpp  io_control.hpp  io_uring_descriptor_service.hpp  memory.hpp  null_signal_blocker.hpp  polyfill_thread.hpp  reactive_socket_service.hpp  reactive_socket_service_base.hpp  select_interrupter.hpp  signal_blocker.hpp  socket_select_interrupter.hpp  socket_types.hpp  thread.hpp  thread_group.hpp
asio/include/asio/detail/impl/: null_event.ipp  (+5 more)
asio/include/asio/impl/: spawn.hpp  thread_pool.ipp
asio/include/asio/posix/: basic_descriptor.hpp
asio/src/doc/: using.qbk
asio/src/tests/unit/: unit_test.hpp
include/asio/detail/: config.hpp
include/asio/detail/impl/: signal_set_service.ipp
src/doc/: using.qbk
src/examples/cpp11/executors/: actor.cpp
src/examples/cpp11/invocation/: prioritised_handlers.cpp
src/examples/cpp11/operations/: composed_1.cpp
src/examples/cpp11/parallel_group/: wait_for_all.cpp  wait_for_one.cpp
src/examples/cpp11/timers/: time_t_timer.cpp
src/examples/cpp11/tutorial/: daytime_dox.txt
src/examples/cpp14/deferred/: deferred_3.cpp  deferred_4.cpp  deferred_6.cpp  deferred_7.cpp
src/examples/cpp14/executors/: async_1.cpp  async_2.cpp  bank_account_2.cpp
src/examples/cpp14/operations/: c_callback_wrapper.cpp  callback_wrapper.cpp  composed_3.cpp  composed_8.cpp
src/examples/cpp14/parallel_group/: ranged_wait_for_all.cpp  wait_for_all.cpp  wait_for_one.cpp  wait_for_one_success.cpp
src/examples/cpp17/coroutines_ts/: echo_server_with_as_single_default.cpp  range_based_for.cpp  refactored_echo_server.cpp
src/examples/cpp20/coroutines/: echo_server_with_deferred.cpp  echo_server_with_deferred_default.cpp  timeout.cpp
src/examples/cpp20/operations/: composed_1.cpp  composed_3.cpp  composed_5.cpp
src/tests/properties/cpp03/: can_prefer_free_require.cpp  can_prefer_member_prefer.cpp  can_prefer_not_applicable_free_prefer.cpp  can_prefer_not_applicable_free_require.cpp  can_prefer_not_applicable_static.cpp  can_prefer_not_preferable_free_prefer.cpp  can_prefer_not_preferable_free_require.cpp  can_prefer_static.cpp  can_prefer_unsupported.cpp  can_query_not_applicable_free.cpp  can_query_not_applicable_member.cpp  can_query_not_applicable_unsupported.cpp  can_require_concept_free.cpp  can_require_concept_not_applicable_free.cpp  can_require_concept_not_applicable_member.cpp  can_require_not_applicable_member.cpp  can_require_not_applicable_static.cpp  can_require_not_applicable_unsupported.cpp  can_require_static.cpp  can_require_unsupported.cpp  prefer_free_require.cpp  prefer_member_prefer.cpp  prefer_unsupported.cpp  query_free.cpp  query_member.cpp  query_static.cpp  require_free.cpp  require_static.cpp
src/tests/properties/cpp11/: can_prefer_free_require.cpp  can_prefer_member_prefer.cpp  can_prefer_member_require.cpp  can_prefer_not_applicable_free_prefer.cpp  can_prefer_not_applicable_member_prefer.cpp  can_prefer_not_applicable_static.cpp  can_prefer_not_applicable_unsupported.cpp  can_prefer_not_preferable_free_prefer.cpp  can_prefer_not_preferable_member_prefer.cpp  can_prefer_not_preferable_member_require.cpp  can_prefer_not_preferable_static.cpp  can_query_member.cpp  can_query_not_applicable_free.cpp  can_query_not_applicable_member.cpp  can_query_static.cpp  can_query_unsupported.cpp  can_require_concept_not_applicable_unsupported.cpp  can_require_concept_static.cpp  can_require_concept_unsupported.cpp  can_require_free.cpp  can_require_not_applicable_static.cpp  can_require_unsupported.cpp  prefer_free_prefer.cpp  prefer_member_prefer.cpp  prefer_unsupported.cpp  query_free.cpp  require_concept_member.cpp  require_concept_static.cpp  require_free.cpp
src/tests/properties/cpp14/: can_prefer_member_require.cpp  can_prefer_not_applicable_member_prefer.cpp  can_prefer_not_applicable_member_require.cpp  can_prefer_not_applicable_unsupported.cpp  can_prefer_not_preferable_free_prefer.cpp  can_prefer_not_preferable_member_prefer.cpp  can_prefer_not_preferable_static.cpp  can_prefer_not_preferable_unsupported.cpp  can_prefer_static.cpp  can_prefer_unsupported.cpp  can_query_free.cpp  can_query_not_applicable_member.cpp  can_query_not_applicable_unsupported.cpp  can_query_static.cpp  can_query_unsupported.cpp  can_require_concept_member.cpp  can_require_concept_not_applicable_free.cpp  can_require_concept_not_applicable_member.cpp  can_require_concept_not_applicable_static.cpp  can_require_member.cpp  can_require_not_applicable_free.cpp  can_require_not_applicable_member.cpp  can_require_not_applicable_static.cpp  prefer_free_prefer.cpp  prefer_member_prefer.cpp  prefer_static.cpp  require_concept_free.cpp  require_concept_static.cpp  require_member.cpp  require_static.cpp
(+284 files in other folders)
